# ChangeLog for net-misc/bti
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/bti/ChangeLog,v 1.2 2009/01/12 18:20:01 gregkh Exp $

*bti-009 (12 Jan 2009)

  12 Jan 2009; Greg Kroah-Hartman <gregkh@gentoo.org> +bti-009.ebuild:
  bti 009 version released (needed for change to twitter server api)

*bti-007 (26 Oct 2008)

  26 Oct 2008; Greg Kroah-Hartman <gregkh@gentoo.org> +metadata.xml,
  +bti-007.ebuild:
  added the bti package (version 007) to the tree
