@@ -1,6 +1,8 @@
 DIST bti-007.tar.bz2 15465 RMD160 147338c664db08b07b582d7c74f1dd6f9fef40d9 SHA1 2ad6de21fb014688e4f8dd8caf9c47bb7e0a15f7 SHA256 77ab205ea2294cf3ffc04bcb3fd266f2efce720e4c8b28aec3ac9a328f5e7eb3
 DIST bti-009.tar.bz2 15908 RMD160 312842bb9a6ba289d981b099842c05200f573262 SHA1 e0e3465e7de82e8c23f9c30730a1610b1e2cf744 SHA256 0575127695907f5fea6ab3a1cf9f872f09e64ed4f20bff312f8fa3b0bf4b4488
+DIST bti-010.tar.bz2 16312 RMD160 73c98e7a1d01c33a9e957bf74e3c1180de85a352 SHA1 48b14311f1e3446b300cdf80416870cfed96468c SHA256 27c31104eb0123349338ae9f25754bcd04ffc28b1e0cfdf757217cd1c80e2511
 EBUILD bti-007.ebuild 637 RMD160 c2adfb4b17ae0f51a2b889f21114d098506a75a2 SHA1 3a7eca1fcac109f4deff11c121c9da20ce7d9e1e SHA256 67759e9652b3888a8bbb62d3df30f3ba27b6009ce355e73447d8a3cad031d2d7
 EBUILD bti-009.ebuild 715 RMD160 71ca418ab71c12e1f7a36a92d79f7c09fd595ca7 SHA1 0ae432af463c714e82817901af37c725dca11f34 SHA256 71f897c0c883d0f8b9fe85725f6b8b73300590cc9ce279d64a474a940c7a70b5
-MISC ChangeLog 525 RMD160 21b59457328bcc84dd4c0c97dfd192ab8f778ae1 SHA1 8bb2905070f9b14fd4c5a24e467e3f2a8a245a15 SHA256 b16887886bdf27b2adeebb29b3c9db58cb8018f019d0c5d94672f66cfa9ffffc
+EBUILD bti-010.ebuild 715 RMD160 a8d5a1ac588eae9663c198c2b3d29803472e4fbe SHA1 577ff8d7ae25310861eed8d9a3854bc2ae0b6375 SHA256 ae56094432804ef73428c28dfdca1a4bf37e1c9a433374637fcc12f3d7f1819e
+MISC ChangeLog 635 RMD160 4051ebd2dd621ef5d14700c8899fec26e799ee92 SHA1 bf712f31dd9bb1d6cbe47f7cba16cd5d7167470a SHA256 0fcf4a56932e80d39fcb96760d1e57452c066d6f8718b804d8fd66bb5d7ff55f
 MISC metadata.xml 254 RMD160 ef248147782784116dcd92d8ff9c8cd5d302da3b SHA1 e9975a8c657d8f8a1d723d6f92074a4db95a2a19 SHA256 f65d3202ba781538623f44eaa8996de9b4fa1a43f828821dfcad736cec27aba6
