@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/bti
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/bti/ChangeLog,v 1.2 2009/01/12 18:20:01 gregkh Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/bti/ChangeLog,v 1.3 2009/01/12 18:43:18 gregkh Exp $
+
+*bti-010 (12 Jan 2009)
+
+  12 Jan 2009; Greg Kroah-Hartman <gregkh@gentoo.org> +bti-010.ebuild:
+  010 release
 
 *bti-009 (12 Jan 2009)
 
